# hungarian_optimizer

./: CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp  run.sh
inc/: hungarian_optimizer.h  secure_matrix.h
